[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xwyzsn_decorator"
version = "0.0.5"
description = "personal decorator wrapper"
authors = [
    { name = "JanChi", email = "xwyzsn@gmail.com" }
]
readme = "README.md"

dependencies=[
    "cloudpickle>=2.2.1",
    "tornado>=6.3.2",
    "gradio>=4.39.0",
    "pandas>=2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["x_decorator"]

